feat: added parameters into swagger documentation
